praxis-rs/tui/src/chatwidget/snapshots/praxis_tui__chatwidget__tests__unified_exec_wait_before_streamed_agent_message.snap
---
source: tui/src/chatwidget/tests.rs
expression: combined
---
• Waited for background terminal · cargo test -p praxis-core

• Streaming response.
