praxis-rs/tui/src/chatwidget/snapshots/praxis_tui__chatwidget__tests__unified_exec_wait_status_renders_command_in_single_details_row.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
• Waiting for background terminal (0s • esc to …
  └ cargo test -p praxis-core -- --exact…


› Ask Praxis to do anything

  gpt-5.3-codex default · 100% left · /tmp/proj…
